# polyui-rs

./: .eslintrc.js  .gitignore  .prettierrc  .prettierrc.js  Cargo.toml  electron-builder.yml  package.json  pnpm-lock.yaml  rollup.config.js
apps/desktop/: package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml
apps/installer/: package.json  postcss.config.js  tailwind.config.js  vite.config.ts
apps/installer/src/: App.tsx  index.html  index.tsx
apps/installer/src-tauri/: Cargo.toml  build.rs
apps/installer/src-tauri/src/: main.rs  menu.rs
apps/installer/src/components/: Language.tsx
apps/landing/: package.json
core/: Cargo.toml
core/src/api/: mod.rs  mod_extraction.rs
core/src/api/utils/: invalidate.rs  library.rs
core/src/state/: profiles.rs
crates/plugin-msapi/src/: config.rs
src/back/: ipc.ts  main.ts  preload.ts
src/back/auth/: AuthManager.ts  Constants.ts
src/back/core/: BridgeManager.ts  ConfigManager.ts
src/back/types/: Config.ts  Rule.ts
src/back/utils/: Logger.ts  textUtils.ts
src/front/: App.svelte  global.d.ts
src/front/panels/: AboutPanel.svelte  HomePanel.svelte
