[workspace]
members = [
  "core",
  "crates/*",
  "apps/desktop/src-tauri",
  "apps/installer/src-tauri",
  "apps/cli"
]
resolver = "2"

[workspace.dependencies]
prisma-client-rust =  { git = "https://github.com/Brendonovich/prisma-client-rust", rev = "c965b89f1a07a6931d90f4b5556421f7ffcda03b", features = [
  "rspc",
  "sqlite-create-many",
  "migrations",
  "sqlite",
], default-features = false }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", rev = "c965b89f1a07a6931d90f4b5556421f7ffcda03b", features = [
  "rspc",
  "sqlite-create-many",
  "migrations",
  "sqlite",
], default-features = false }
prisma-client-rust-sdk = { git = "https://github.com/Brendonovich/prisma-client-rust", rev = "c965b89f1a07a6931d90f4b5556421f7ffcda03b", features = [
  "sqlite",
], default-features = false }

rspc = { version = "0.1.2" }
specta = { version = "0.0.6" }
httpz = { version = "0.0.3" }

swift-rs = { git = "https://github.com/Brendonovich/swift-rs.git", rev = "833e29ba333f1dfe303eaa21de78c4f8c5a3f2ff" }

tokio = { version = "1.25.0" }

[patch.crates-io]
rspc = { git = "https://github.com/oscartbeaumont/rspc", rev = "c03872c0ba29d2429e9c059dfb235cdd03e15e8c" }   # TODO: Move back to crates.io when new jsonrpc executor + `tokio::spawn` in the Tauri IPC plugin + upgraded Tauri version is released
specta = { git = "https://github.com/oscartbeaumont/rspc", rev = "c03872c0ba29d2429e9c059dfb235cdd03e15e8c" }
httpz = { git = "https://github.com/oscartbeaumont/httpz", rev = "a5185f2ed2fdefeb2f582dce38a692a1bf76d1d6" }